--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -11,15 +11,16 @@
         android:id="@+id/new_pw_title_layout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:paddingLeft="15dp"
         android:background="#ffffff"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/new_pw_back_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_gravity="center"
-            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
+            android:background="@drawable/back" />
 
         <TextView
             android:id="@+id/new_pw_login_txt"
