--- a/app/src/main/res/layout/contents_main_custom_title_bar.xml
+++ b/app/src/main/res/layout/contents_main_custom_title_bar.xml
@@ -30,12 +30,12 @@
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/contents_main_like"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/ic_favorite_border_black_24dp" />
+        <!--<Button-->
+            <!--android:id="@+id/contents_main_like"-->
+            <!--android:layout_width="24dp"-->
+            <!--android:layout_height="24dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:background="@drawable/ic_favorite_border_black_24dp" />-->
 
         <Button
             android:id="@+id/contents_main_bell"
