--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -13,14 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#ffffff"
+        android:paddingLeft="15dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/find_pw_back_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_gravity="center"
-            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
+            android:background="@drawable/back" />
 
         <TextView
             android:id="@+id/find_pw_login_txt"
