--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,17 @@
     android:layout_height="wrap_content"
     tools:context=".MainActivityDir.MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/main_toolbar"
+    <include
+        android:id="@+id/main_title_bar"
+        layout="@layout/mainpage_custom_title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <include
-            layout="@layout/mainpage_custom_title_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="50dp" />
 
     <ScrollView
         android:id="@+id/main_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/main_toolbar">
+        android:layout_below="@id/main_title_bar">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,22 +30,12 @@
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/main_category_tab"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:tabGravity="center"
                 app:layout_constraintTop_toBottomOf="@+id/main_pager"
                 app:tabIndicatorColor="#e90005"
                 app:tabSelectedTextColor="#e90005" />
-
-            <ImageView
-                android:id="@+id/main_category_open_img"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/option"
-                app:layout_constraintBottom_toBottomOf="@id/main_category_tab"
-                app:layout_constraintLeft_toRightOf="@id/main_category_tab"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/main_pager" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_category_recycler"
