--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -13,15 +13,16 @@
     <RelativeLayout
         android:id="@+id/my_page_title_layout"
         android:layout_width="match_parent"
+        android:paddingLeft="15dp"
         android:layout_height="50dp">
 
         <Button
             android:id="@+id/my_page_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
+            android:background="@drawable/back" />
 
         <TextView
             android:id="@+id/my_page_id"
@@ -29,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/my_page_back"
+            android:layout_marginLeft="10dp"
             android:text="아이디"
             android:textColor="#000000"
             android:textSize="17sp" />
@@ -58,7 +60,7 @@
             android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/my_page_my_cash"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_24dp" />
+            android:src="@drawable/charge" />
 
         <Button
             android:id="@+id/my_page_title_setting_btn"
