--- a/app/src/main/res/layout/settings_title_bar.xml
+++ b/app/src/main/res/layout/settings_title_bar.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="50dp">
+
+    <ImageView
+        android:id="@+id/setting_back_btn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/back" />
 
     <TextView
-        android:id="@+id/setting_title_bar_title"
+        android:id="@+id/setting_title_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_24dp"
-        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/setting_back_btn"
+        android:layout_marginLeft="10dp"
         android:text="설정"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <View
         android:id="@+id/settings_title_bar_underline"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/setting_title_bar_title"
-        android:layout_marginTop="5dp"
+        android:layout_alignParentBottom="true"
         android:background="#c0c0c0" />
 
 </RelativeLayout>
