--- a/app/src/main/res/layout/activity_webtoon.xml
+++ b/app/src/main/res/layout/activity_webtoon.xml
@@ -128,7 +128,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/comment" />
+                android:background="@drawable/comment_wh" />
 
             <TextView
                 android:id="@+id/webtoon_comments_count"
