--- a/app/src/main/res/layout/activity_contents_main.xml
+++ b/app/src/main/res/layout/activity_contents_main.xml
@@ -62,6 +62,7 @@
             android:text="첫화보기" />
 
         <Button
+            android:id="@+id/contents_main_follow_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
