--- a/app/src/main/res/layout/main_category_contents_item.xml
+++ b/app/src/main/res/layout/main_category_contents_item.xml
@@ -51,10 +51,11 @@
         <ImageView
             android:id="@+id/main_category_view_img"
             android:layout_width="15dp"
-            android:layout_height="wrap_content"
+            android:layout_height="15dp"
+            android:layout_marginTop="5dp"
             android:layout_below="@id/main_category_item_name"
             android:layout_toLeftOf="@+id/main_category_view_count"
-            android:src="@drawable/ic_eye_white_24dp" />
+            android:src="@drawable/view_wh" />
 
         <TextView
             android:id="@+id/main_category_view_count"
