--- a/app/src/main/res/drawable/round_border_gray_no_solid.xml
+++ b/app/src/main/res/drawable/round_border_gray_no_solid.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#ffffff"/>
-    <stroke android:color="#000000" android:width="1dp"/>
+    <stroke android:color="#c0c0c0" android:width="1dp"/>
     <corners
         android:bottomRightRadius="5dp"
         android:bottomLeftRadius="5dp"
