--- a/app/src/main/res/layout/activity_manage_my_works.xml
+++ b/app/src/main/res/layout/activity_manage_my_works.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f9f9f7"
     tools:context=".ManageMyWorksDir.ManageMyWorksActivity">
 
     <LinearLayout
@@ -10,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#ffffff"
-        android:paddingLeft="15dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="15dp">
 
         <Button
             android:id="@+id/manage_back_btn"
@@ -32,22 +34,26 @@
 
     <View
         android:id="@+id/manage_underline"
-        android:layout_below="@+id/manage_title_layout"
-        android:background="#ffffff"
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:layout_below="@+id/manage_title_layout"
+        android:background="#c0c0c0" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/manage_tab_layout"
-        android:layout_below="@id/manage_underline"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/manage_underline"
+        android:textAlignment="center"
+        app:tabGravity="center"
+        app:tabIndicatorColor="#e90005"
+        app:tabSelectedTextColor="#e90005"
+        app:tabTextColor="#666666" />
 
-    <TextView
-        android:layout_below="@id/manage_tab_layout"
-        android:text="기간조회설정"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/manage_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/manage_tab_layout" />
 
 </RelativeLayout>
