--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -77,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
+        android:layout_below="@+id/my_page_title_layout"
         app:tabGravity="center"
         app:tabIndicatorColor="#e90005"
         app:tabSelectedTextColor="#e90005"
@@ -86,7 +87,6 @@
         android:id="@+id/my_page_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/my_page_management_btn"
         android:layout_below="@id/my_page_tab_layout" />
 
     <Button
@@ -94,10 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_margin="10dp"
         android:background="@drawable/black_stroke"
         android:text="내 작품 관리"
         android:textColor="#8170dc"
