--- a/app/src/main/res/layout/myworks_fragment1_month_data_layout_item.xml
+++ b/app/src/main/res/layout/myworks_fragment1_month_data_layout_item.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    android:layout_height="30dp"
+    android:gravity="center"
+    android:paddingRight="10dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/manage_profit_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="test"
-        android:textAlignment="center" />
+        android:textSize="10sp"
+        android:text="용비불패(웹툰무비)"
+        android:gravity="right"
+        />
 
     <TextView
         android:id="@+id/manage_profit_view_count"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="10sp"
         android:layout_weight="1"
         android:text="test"
-        android:textAlignment="center" />
+        android:gravity="right" />
 
     <TextView
         android:id="@+id/manage_profit_selling_cash"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:textSize="10sp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="test"
-        android:textAlignment="center" />
+        android:gravity="right" />
 
     <TextView
         android:id="@+id/manage_profit_selling_profit"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="10sp"
         android:layout_weight="1"
         android:text="test"
-        android:textAlignment="center" />
+        android:gravity="right" />
 </LinearLayout>
