--- a/app/src/main/res/layout/myworks_fragment2_month_data_layout_item.xml
+++ b/app/src/main/res/layout/myworks_fragment2_month_data_layout_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1.2"
         android:textSize="10sp"
-        android:text="8,000,000"
+        android:text="0"
         android:gravity="center"
         />
 
@@ -22,8 +22,8 @@
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:layout_weight="1.2"
-        android:text="test"
-        android:gravity="right" />
+        android:text="0"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/calculation_cal_amount"
@@ -31,8 +31,8 @@
         android:textSize="10sp"
         android:layout_height="wrap_content"
         android:layout_weight="1.2"
-        android:text="test"
-        android:gravity="right" />
+        android:text="0"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/calculation_cal_due_date"
@@ -40,8 +40,8 @@
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:layout_weight="1"
-        android:text="test"
-        android:gravity="right" />
+        android:text="정산내용없음"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/calculation_cal_state"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:layout_weight="0.7"
-        android:text="미정산"
-        android:gravity="right" />
+        android:text=""
+        android:gravity="center" />
 
 </LinearLayout>
