웹툰 페이지를 위한 이미지 로딩 방식 개선 (largeHeap 설정, 추후 디바이스 크기 수정 필요), 최근 본 작품을 위한 sqlite에서 data 및 쿼리문 오류 수정, 댓글 단 후 댓글 페이지 refresh, 보거서 일정에 따라 로그인 방법 선택창 수정 할 계획

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -98,6 +98,6 @@
         android:background="@drawable/black_stroke"
         android:text="내 작품 관리"
         android:textColor="#8170dc"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
