--- a/app/src/main/res/layout/fragment_my_page1_recycler_item.xml
+++ b/app/src/main/res/layout/fragment_my_page1_recycler_item.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="9sp"
-            android:text="2018.09.12" />
+            android:text="" />
 
         <TextView
             android:id="@+id/my_page_fragment1_contents_name"
@@ -32,7 +32,7 @@
             android:layout_below="@id/my_page_fragment1_date"
             android:textSize="15sp"
             android:textColor="#000000"
-            android:text="용비불패" />
+            android:text="" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -51,7 +51,7 @@
                 android:id="@+id/my_page_fragment1_contents_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0화"
+                android:text=""
                 android:layout_centerHorizontal="true"
                 android:textColor="#ffffff"
                 android:textSize="15sp" />
