로그인 선택 창 수정 완료, 전체보기 추가 완료, 전체보기 페이지 구현중

--- a/app/src/main/res/layout/contents_main_works_list_items.xml
+++ b/app/src/main/res/layout/contents_main_works_list_items.xml
@@ -7,8 +7,7 @@
     <ImageView
         android:id="@+id/contents_main_item_image"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/dummy_cate_cont" />
+        android:layout_height="70dp" />
 
     <TextView
         android:id="@+id/contents_main_item_title"
