--- a/app/src/main/res/layout/main_category_contents_item.xml
+++ b/app/src/main/res/layout/main_category_contents_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_category_item_layout"
     android:layout_width="100dp"
     android:layout_height="140dp">
 
     <ImageView
-        android:src="@drawable/dummy_100x140"
         android:id="@+id/main_category_item_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <RelativeLayout
+        android:id="@+id/main_category_item_info_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
@@ -19,32 +20,32 @@
             android:id="@+id/main_category_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="작품명"
-            android:layout_margin="5dp"
-            android:textColor="#ffffff"
             android:layout_alignParentLeft="true"
+            android:layout_margin="5dp"
             android:layout_toLeftOf="@id/main_category_movie_img"
+            android:text="작품명"
+            android:textColor="#ffffff"
             android:textSize="11sp" />
 
         <ImageView
-            android:visibility="gone"
-            android:src="@drawable/movie"
             android:id="@+id/main_category_movie_img"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_width="15dp"
-            android:layout_height="15dp" />
+            android:src="@drawable/movie"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/main_category_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/main_category_item_name"
-            android:text="작가이름"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
+            android:text="작가이름"
             android:textColor="#ffffff"
             android:textSize="10sp" />
 
@@ -52,8 +53,8 @@
             android:id="@+id/main_category_view_img"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_marginTop="5dp"
             android:layout_below="@id/main_category_item_name"
+            android:layout_marginTop="5dp"
             android:layout_toLeftOf="@+id/main_category_view_count"
             android:src="@drawable/view_wh" />
 
@@ -63,9 +64,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/main_category_item_name"
             android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
             android:text="0.0"
             android:textColor="#ffffff"
             android:textSize="10sp" />
