--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,8 @@
                 android:id="@+id/main_category_tab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabGravity="center"
                 app:layout_constraintTop_toBottomOf="@+id/main_pager"
+                app:tabGravity="center"
                 app:tabIndicatorColor="#e90005"
                 app:tabSelectedTextColor="#e90005" />
 
@@ -69,11 +69,34 @@
                 android:id="@+id/main_newarrival_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="이달의 신작보기"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/main_sub_add_banner" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="@+id/main_newarrival_text"
+                app:layout_constraintRight_toRightOf="parent">
+
+                <TextView
+                    android:id="@+id/main_arrival_expand_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="전체보기" />
+
+                <ImageView
+                    android:id="@+id/main_arrival_expand_image"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/more" />
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_arrival_recycler"
@@ -82,6 +105,7 @@
                 android:layout_margin="5dp"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/main_newarrival_text" />
+
 
             <include
                 android:id="@+id/main_discount_include"
