--- a/app/src/main/res/layout/expand_contents_fragment.xml
+++ b/app/src/main/res/layout/expand_contents_fragment.xml
@@ -4,61 +4,18 @@
     android:layout_height="match_parent">
 
     <ScrollView
-        android:layout_centerHorizontal="true"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/expand_tab">
-
-        <!--<GridLayout-->
-            <!--android:id="@+id/expand_grid_layout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:columnCount="3"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-            <!--<Button-->
-                <!--android:layout_columnWeight="1"-->
-                <!--android:text="버튼 테스트"-->
-                <!--/>-->
-
-        <!--</GridLayout>-->
+        android:layout_below="@id/expand_tab"
+        android:layout_centerHorizontal="true">
 
         <GridLayout
-        android:id="@+id/expand_grid_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="3"
-        android:orientation="horizontal"/>
+            android:id="@+id/expand_grid_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="3"
+            android:orientation="horizontal" />
     </ScrollView>
 
 </RelativeLayout>
