--- a/app/src/main/res/layout/mainpage_custom_title_bar.xml
+++ b/app/src/main/res/layout/mainpage_custom_title_bar.xml
@@ -18,31 +18,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@id/title_mypage_btn"
         android:layout_toRightOf="@+id/title_logo"
         android:background="@drawable/titlebar_border">
 
-        <EditText
+        <Button
             android:id="@+id/title_search_text"
             android:layout_width="match_parent"
             android:layout_height="32dp"
+            android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:background="#e0e0e0"
-            android:layout_centerInParent="true"
             android:hint="@string/title_search"
             android:textAlignment="center"
             android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/main_title_search_btn"
-            android:layout_centerInParent="true"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/search"
             android:layout_width="25dp"
-            android:layout_height="25dp" />
-
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/search" />
     </RelativeLayout>
 
     <Button
