검색 기능 구현 중, 최근 검색어 완료, 인기 검색어 구현 필요

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,13 +16,14 @@
         android:layout_toRightOf="@+id/title_logo">
 
         <Button
+            android:id="@+id/search_back_btn"
             android:layout_centerVertical="true"
             android:background="@drawable/back"
             android:layout_width="15dp"
             android:layout_height="15dp" />
 
         <EditText
-            android:id="@+id/title_search_text"
+            android:id="@+id/search_keyword"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true"
@@ -35,7 +36,7 @@
             android:textSize="12sp" />
 
         <Button
-            android:id="@+id/main_title_search_btn"
+            android:id="@+id/search_search_btn"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/search"
@@ -44,33 +45,9 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/search_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title_search_layout">
-
-        <Button
-            android:id="@+id/search_recent_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#ffffff"
-            android:text="최근 검색어"
-            android:textColor="#786aaa" />
-
-        <Button
-            android:id="@+id/search_pop_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#786aaa"
-            android:text="인기 검색어"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/search_pager"
-        android:layout_below="@id/search_tab_layout"
+        android:id="@+id/search_fragment_container"
+        android:layout_below="@+id/title_search_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
