--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#ffffff"
-        android:paddingLeft="15dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="15dp">
 
         <Button
             android:id="@+id/register_back_btn"
@@ -24,7 +24,7 @@
             android:background="@drawable/back" />
 
         <TextView
-            android:id="@+id/register_login_txt"
+            android:id="@+id/register_back_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -87,8 +87,8 @@
             android:layout_height="40dp"
             android:background="@drawable/round_border_white"
             android:hint="  비밀번호를 입력해주세요"
-            android:textSize="12sp"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -112,8 +112,8 @@
             android:layout_height="40dp"
             android:background="@drawable/round_border_white"
             android:hint="  비밀번호를 다시 입력해주세요"
-            android:textSize="12sp"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -137,8 +137,8 @@
             android:layout_height="40dp"
             android:background="@drawable/round_border_white"
             android:hint="  회원 이름을 입력해주세요"
-            android:textSize="12sp"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <TextView
@@ -146,17 +146,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="모든 내용을 기입하여 주십시오"
-        android:textColor="#e90005" />
+        android:textColor="#e90005"
+        android:textSize="12sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/register_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp" />
+
+        <TextView
+            android:id="@+id/register_terms_and_condition"
+            android:text="@string/underlined_terms_and_condition"
+            android:textSize="12sp"
+            android:textColor="#1d68bf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="에 동의합니다(필수)"
+            android:textColor="#000000"
+            android:textSize="12sp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/register_join_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_border_purple"
         android:layout_margin="10dp"
+        android:background="@drawable/round_border_purple"
         android:text="회원가입"
         android:textColor="#ffffff" />
 
